--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    	
     <p style="text-align: left;">
         <br>=================<br>
-        <span id="e">实习经验</span>
+        <span id="e">实习经历</span>
         <br>=================<br></p>     	
         [Summer 2017] <b>Research Intern</b>, <a href="http://www.genomics.cn/"> BGI </a>AI Lab <br>
         [Summer 2016] <b>Algorithm Intern</b>, <a href="http://www.iactive.com.cn/"> iactive </a>
@@ -100,7 +100,7 @@
 		
         <b>1. 手势及声控的桌面浏览器</b>
 		<p style="color:#ccc; display: inline">
-		[<a href="https://v.qq.com/x/page/z0506ipgg7a.html" target="_blank">演示视频</a>]</p><br>
+		[<a href="https://v.youku.com/v_show/id_XODk0MTMyMzc2.html?spm=a2hzp.8244740.0.0" target="_blank">演示视频</a>]</p><br>
 		<br>
 			
 		<b>2. 2013年全国电子设计竞赛 作品</b> 
