--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
         <p style="text-align: left;"><br>=================<br>
-        <span id="e">简历</span>
+        <span id="pdf/cv.pdf">简历</span>
         <br>=================<br>
         [<a href="aaa" target="_blank">link</a>]</p>
  
