--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
 
         <p style="text-align: left;"><br>=================<br>
-        <span id="pdf/cv.pdf">简历</span>
+        <span id="e">简历</span>
         <br>=================<br>
-        [<a href="aaa" target="_blank">link</a>]</p>
+        [<a href="pdf/cv.pdf" target="_blank">link</a>]</p>
  
         <p style="text-align: left;margin-bottom: 150px">
         <br>=================<br>
