--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <p style="text-align: left;"><br>=================<br>
         <span id="e">简历</span>
         <br>=================<br>
-        [<a href="pdf/cv.pdf" target="_blank">link</a>]</p>
+        [<a href="pdf/resume.pdf" target="_blank">link</a>]</p>
  
         <p style="text-align: left;margin-bottom: 150px">
         <br>=================<br>
